# bibstatistik

./: .gitignore  pyproject.toml
bibstatistik/: berlin-dashboard.py  berlin.ipynb
