[tool.poetry]
name = "bibstatistik"
version = "0.1.0"
description = ""
authors = ["André Wendler <andre.wendler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
ipykernel = "^6.29.0"
streamlit = "^1.30.0"
matplotlib = "^3.8.2"
altair = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
